--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -72,6 +72,7 @@ h3 {
 }
 
 .col-budapest-terkep{
+    text-align: center;
     flex: 80%;
     padding: 0 4px;
 }
@@ -81,4 +82,28 @@ h3 {
     vertical-align: middle;
     width: 100%;
     height:auto;
+}
+.modal-overlay {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    z-index: 999;
+}
+
+.nagy-kep {
+    display: block;
+    margin: auto;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.nagy-kepalairas{
+    text-align: center;
+    padding-top: 5px;
+    border-radius: 5px;
+    border: grey 2px;
 }
