--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,17 @@
 <div class="about-container">
     <h3>Rólunk</h3>
     <p>Folyamatosan azon dolgozunk, hogy megkönnyítsük, stresszmentesítsük a metróvonalak használatát felhasználóink számára!</p>
-    <p>Készítők: Lencs Barbara, Németh Sára, Kobida Krisztián</p>
+    <p>Készítők: Németh Sára, Kobida Krisztián</p>
     <p>2024 ©</p>
+    <!--<ul>
+        <li *ngFor="let stop of stops | async">
+          <p>{{ stop.name }}</p>
+          <p> {{ stop.doorInfo }}</p>
+        </li>
+      </ul>
+      <button (click)="addStop()">Add Stop</button>
+<button (click)="editStop(stop.id, { name: 'New Name', doorInfo: 'New Door Info' })">Edit Stop</button>
+<button (click)="deleteStop(stop.id)">Delete Stop</button> -->
+
+  
 </div>
