auth regex errorhandling stb 0.455

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="login-container">
 
   <div class="form-group">
-    <input type="email" id="email" [(ngModel)]="email" required placeholder="E-mail cím" />
+    <input type="email" id="email" [(ngModel)]="email" required email placeholder="E-mail cím" />
   </div>
 
 
