--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -61,3 +61,18 @@ button:hover {
     margin-right: 10%;
     width: 80%
 }
+.signup-btn:disabled,
+.disabled-button {
+    opacity: 0.6; 
+    cursor: not-allowed;
+}
+
+.error-message{
+    color: red;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+
+.form-group input.invalid-input {
+    border-color: red;
+}
