--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,3 +25,10 @@ a {
 a:hover {
     background-color: #555;
 } 
+
+span.btn.btn-primary{
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 3px;
+    margin-left: 3px;
+} 
