--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -99,3 +99,23 @@ text-decoration: none;
         padding: 10px 20px;
         cursor: pointer;
 }
+.googlesignin{
+    display: inline-block;
+      vertical-align: middle;
+      padding-left: 42px;
+      padding-right: 42px;
+      padding-top: 5px;
+      font-size: 14px;
+      font-weight: bold;
+      font-family: 'Roboto', sans-serif;
+}
+.button.googlesignin{
+    display: inline-block;
+      background: white;
+      color: #444;
+      width: 190px;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+}
