--- a/src/app/lines/lines.component.html
+++ b/src/app/lines/lines.component.html
@@ -11,7 +11,7 @@
   </ul>
   </div>
 
-  <div id="megallok-container">
+  <div id="megallok-container" class="d-flex flex-wrap justify-content-around">
   <div class="megallok" *ngIf="selectedLine && destinations.length">
     <h3>Válassz irányt</h3>
     <div *ngFor="let destination of destinations">
