--- a/src/app/lines/lines.component.css
+++ b/src/app/lines/lines.component.css
@@ -29,18 +29,23 @@
 }
 
 .megallok{
-align-items: left;
-    justify-content: center;
+    flex: 1 0 40%; 
+    margin-right: 20px; 
 }
 
 .megallokepek{
-    flex: 1;
     max-width: 100%;
-    height:auto;
+    height: auto;
     margin-bottom: 20px;
 }
 #megallok-container{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+@media (max-width: 768px) {
+    .megallok {
+      flex-basis: 100%; 
+      margin-right: 0; 
+    }
 }
